--- a/news/templates/posts.html
+++ b/news/templates/posts.html
@@ -1,6 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
+{% load custom_tags %}
 
 {% block title %}
 Posts
@@ -31,6 +32,10 @@ Posts
                <td>{{ Post.post_time }}</td>
                <td>{{ Post.content | truncatewords:20 | my_filter }}</td>
 
+               <td><a class="btn btn-primary btn-sm" href="/news/{{ post.pk }}">Читать</a></td>
+               <td><a class="btn btn-primary btn-sm" href="/news/news/{{ post.pk }}/edit/">Редактировать</a></td>
+               <td><a class="btn btn-primary btn-sm" href="/news/news/{{ post.pk }}/delete/">Удалить</a></td>
+
 
            </tr>
            {% endfor %}
@@ -40,4 +45,26 @@ Posts
        <h2>Нет новостей</h2>
 
    {% endif %}
+
+
+
+{% if page_obj.has_previous %}
+    <li class="page-item"><a class="page-link" href="?{% url_replace page=1 %}">1</a></li>
+        {% if page_obj.previous_page_number != 1 %}
+            <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
+            <li class="page-item"><a class="page-link" href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a></li>
+               {% endif %}
+            {% endif %}
+
+        <li class="page-item active" aria-current="page"><a class="page-link" href="#">{{ page_obj.number }}</a></li>
+
+        {% if page_obj.has_next %}
+            <li class="page-item"><a class="page-link" href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a></li>
+               {% if paginator.num_pages != page_obj.next_page_number %}
+                   <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
+                   <li class="page-item"><a class="page-link" href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a></li>
+               {% endif %}
+                {% endif %}
+
+
 {% endblock content %}
